Fix issue with inline codeblocks on mobile

--- a/static/css/logstyle.css
+++ b/static/css/logstyle.css
@@ -207,6 +207,10 @@ body {
     body {
         font-size: 85%
     }
+
+    .pre--inline {
+        font-size: 85%
+    }
 }
 
 .chatlog {
